Use https scheme whenever possible, to avoid mixed content issues

--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
                     <dl>
                         <dt>Map data</dt>
                         <dd>
-                            &copy; <a target="_blank" href="http://www.openstreetmap.org/copyright">OpenStreetMap contributors</a>
-                            under <a target="_blank" href="http://opendatacommons.org/licenses/odbl/">ODbL</a>
+                            &copy; <a target="_blank" href="https://www.openstreetmap.org/copyright">OpenStreetMap contributors</a>
+                            under <a target="_blank" href="https://opendatacommons.org/licenses/odbl/">ODbL</a>
                         </dd>
                         <dt>OpenstreetMap.de tiles</dt>
-                        <dd><a target="_blank" href="http://openstreetmap.de/karte.html">openstreetmap.de</a></dd>
+                        <dd><a target="_blank" href="https://openstreetmap.de/karte.html">openstreetmap.de</a></dd>
                         <dt>OpenTopoMap tiles</dt>
                         <dd>
                             &copy; <a target="_blank" href="https://opentopomap.org">OpenTopoMap</a>
@@ -77,13 +77,13 @@
                         </dd>
                         <dt>Thunderforest tiles</dt>
                         <dd>
-                            &copy; <a target="_blank" href="http://www.thunderforest.com">Thunderforest</a>
-                            under <a target="_blank" href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA 2.0</a>
+                            &copy; <a target="_blank" href="https://www.thunderforest.com">Thunderforest</a>
+                            under <a target="_blank" href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA 2.0</a>
                         </dd>
                         <dt>Waymarked Trails tiles</dt>
                         <dd>
-                            &copy; <a target="_blank" href="http://cycling.waymarkedtrails.org">Waymarked Trails</a>
-                            under <a target="_blank" href="http://creativecommons.org/licenses/by-sa/3.0/de/deed.en">CC-BY-SA 3.0 DE</a>
+                            &copy; <a target="_blank" href="https://cycling.waymarkedtrails.org">Waymarked Trails</a>
+                            under <a target="_blank" href="https://creativecommons.org/licenses/by-sa/3.0/de/deed.en">CC-BY-SA 3.0 DE</a>
                         </dd>
                         <dt>BRouter</dt>
                         <dd>
@@ -139,7 +139,7 @@
                         <i>Contact:</i><br>
                         <ul>
                             <li>General discussions/questions, support:<br>
-                                <a href="http://groups.google.com/group/osm-android-bikerouting" target="_blank">http://groups.google.com/group/osm-android-bikerouting</a>
+                                <a href="https://groups.google.com/group/osm-android-bikerouting" target="_blank">https://groups.google.com/group/osm-android-bikerouting</a>
                             </li>
                             <li>Bug reports and feature requests:
                                 <ul>
@@ -157,7 +157,7 @@
                     </p>
                     <p>
                         <i>Data:</i><br>
-                        This is based on <a href="http://www.openstreetmap.org" target="_blank">OpenStreetMap</a>. It is usually updated once a week when a new Planet file is available,
+                        This is based on <a href="https://www.openstreetmap.org" target="_blank">OpenStreetMap</a>. It is usually updated once a week when a new Planet file is available,
                         see dates of <a href="http://brouter.de/brouter/segments4/" target="_blank">data files</a>.
                     </p>
                     <p>
