--- a/index.html
+++ b/index.html
@@ -96,6 +96,11 @@
     <!-- Layers modal window -->
     <div class="modal fade" id="custom_layers" tabindex="-1" role="dialog" aria-labelledby="Layers window" aria-hidden="true">
         <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
                     <h4 class="modal-title">Customize layers</h4>
                 </div>
                 <div class="modal-body">
