Refactor d-inline-block, !important overrides hidden attribute

--- a/index.html
+++ b/index.html
@@ -201,27 +201,27 @@
     <footer>
         <div class="flexrow">
             <ul id="stats">
-                <li class="d-inline-block">
+                <li>
                     <div class="text-muted small hidden-sm-down">Profile</div>
                     <p class="stats-label" id="stat-profile">Profile</p>
                 </li>
-                <li class="d-inline-block">
+                <li>
                     <div class="text-muted small hidden-sm-down">Distance</div>
                     <p class="stats-label" id="distance">0 <abbr title="kilometer">km</abbr></p>
                 </li>
-                <li style="display: inline-block" hidden>
+                <li hidden>
                     <div class="text-muted small hidden-sm-down">Travel time</div>
                     <p class="stats-label" id="totaltime">0 <abbr title="minutes">min</abbr></p>
                 </li>
-                <li style="display: inline-block" hidden>
+                <li hidden>
                     <div class="text-muted small hidden-sm-down">Total Energy (per 100km)</div>
                     <p class="stats-label" id="totalenergy">0 (0)</p>
                 </li>
-                <li class="d-inline-block">
+                <li>
                     <div class="text-muted small hidden-sm-down">Ascend (Plain ascend)</div>
                     <p class="stats-label" id="ascend">0 (0) <abbr title="meter">m</abbr></p>
                 </li>
-                <li class="d-inline-block">
+                <li>
                     <div class="text-muted small hidden-sm-down">Cost (Mean cost factor)</div>
                     <p class="stats-label" id="cost">- (-)</p>
                 </li>
