Refactor duplicate abbr definitions; add kWh abbr

--- a/index.html
+++ b/index.html
@@ -203,23 +203,23 @@
             <ul id="stats">
                 <li>
                     <div class="text-muted small hidden-sm-down">Distance</div>
-                    <p class="stats-label" id="distance">0 <abbr title="kilometer">km</abbr></p>
+                    <p class="stats-label"><span id="distance">0</span> <abbr title="kilometer">km</abbr></p>
                 </li>
                 <li hidden>
                     <div class="text-muted small hidden-sm-down">Travel time</div>
-                    <p class="stats-label" id="totaltime">0 <abbr title="minutes">min</abbr></p>
+                    <p class="stats-label"><span id="totaltime">0</span> <abbr title="minutes">min</abbr></p>
                 </li>
                 <li hidden>
                     <div class="text-muted small hidden-sm-down">Total Energy (per 100km)</div>
-                    <p class="stats-label" id="totalenergy">0 (0)</p>
+                    <p class="stats-label"><span id="totalenergy">0 (0)</span> <abbr title="kilowatt hour">kWh</abbr></p>
                 </li>
                 <li>
                     <div class="text-muted small hidden-sm-down">Ascend (Plain ascend)</div>
-                    <p class="stats-label" id="ascend">0 (0) <abbr title="meter">m</abbr></p>
+                    <p class="stats-label"><span id="ascend">0 (0)</span> <abbr title="meter">m</abbr></p>
                 </li>
                 <li>
                     <div class="text-muted small hidden-sm-down">Cost (Mean cost factor)</div>
-                    <p class="stats-label" id="cost">- (-)</p>
+                    <p class="stats-label"><span id="cost">- (-)</span></p>
                 </li>
             </ul>
             <button id="sidebar-btn" class="btn btn-secondary btn-sm" type="button" aria-label="Toggle sidebar">
