--- a/index.html
+++ b/index.html
@@ -164,36 +164,47 @@
         </div>
     </div>
 
-    <div id="content" class="flexcolumn">
-        <div id="map"></div>
+    <div id="content" class="flexcolumn flexgrow">
+        <div id="sidebar" class="sidebar collapsed">
+            <div class="sidebar-tabs">
+                <ul role="tablist">
+                    <li hidden><a href="#tab_itinerary" role="tab"><i class="fa fa-map-signs"></i></a></li>
+                    <li><a href="#tab_profile" role="tab"><i class="fa fa-wrench"></i></a></li>
+                    <li><a href="#tab_data" role="tab"><i class="fa fa-table"></i></a></li> 
+                </ul>
+            </div>
+            <div class="sidebar-content">
 
-        <div id="message"></div>
-    </div>
-
-
-    <div id="sidebar">
-            <form>
-                <label for="profile_upload">Custom routing profile</label>
-                <textarea class="form-control" type="text" id="profile_upload" spellcheck="false" wrap="off" placeholder="Write your custom profile here."></textarea>
-                <div id="profile_message"></div>
-                <div class="form-group" id="profile_buttons">
-                     <button id="clear" type="button" class="btn btn-sm"><span class="fa fa-eraser"></span> Clear</button>
-                     <button id="upload" type="button" class="btn btn-sm" data-uploading-text="Uploading…"><span class="fa fa-cloud-upload"></span> Upload</button>
-                     <a href="http://brouter.de/brouter/costfunctions.html" target="_blank" class="btn btn-sm btn-info pull-right"><span class="fa fa-question"></span> Help</a>
+                <div class="sidebar-pane" id="tab_profile">
+                    <h1 class="sidebar-header">Custom routing profile<span class="sidebar-close"><i class="fa fa-caret-right"></i></span></h1>
+                    <form class="flexcolumn flexgrow">
+                        <textarea class="form-control flexgrow" id="profile_upload" spellcheck="false" wrap="off" placeholder="Write your custom profile here."></textarea>
+                        <div id="profile_message"></div>
+                        <div class="form-group" id="profile_buttons">
+                             <button id="clear" type="button" class="btn btn-sm"><span class="fa fa-eraser"></span> Clear</button>
+                             <button id="upload" type="button" class="btn btn-sm" data-uploading-text="Uploading…"><span class="fa fa-cloud-upload"></span> Upload</button>
+                             <a href="http://brouter.de/brouter/costfunctions.html" target="_blank" class="btn btn-sm btn-info pull-right"><span class="fa fa-question"></span> Help</a>
+                        </div>
+                    </form>
                 </div>
-            </form>
 
-            <ul id="tab" class="nav nav-tabs" role="tablist">
-            </ul>
-            <div class="tab-content">
-                <div class="tab-pane hidden" id="tab_itinerary">
+                <div class="sidebar-pane" id="tab_data">
+                    <h1 class="sidebar-header">Data<span class="sidebar-close"><i class="fa fa-caret-right"></i></span></h1>
+                    <table id="datatable" class="table mini cell-border hover stripe"></table>
+                </div>
+
+                <div class="sidebar-pane" id="tab_itinerary">
+                    <h1 class="sidebar-header">Itinerary<span class="sidebar-close"><i class="fa fa-caret-right"></i></span></h1>
                     <div id="itinerary">
                     </div>
                 </div>
-                <div class="tab-pane" id="tab_data">
-                    <table id="datatable" class="table mini cell-border hover stripe"></table>
-                </div>
+
             </div>
+        </div>
+
+        <div id="map" class="sidebar-map"></div>
+
+        <div id="message"></div>
     </div>
 
     <div class="collapse" id="elevation-chart"></div>
@@ -222,9 +233,6 @@
                     <p class="stats-label"><span id="cost">- (-)</span></p>
                 </li>
             </ul>
-            <button id="sidebar-btn" class="btn btn-secondary btn-sm" type="button" aria-label="Toggle sidebar">
-                <span class="fa fa-compress"></span>
-            </button>
 
             <button class="btn btn-secondary btn-sm" type="button" data-toggle="collapse" data-target="#elevation-chart" aria-controls="elevation-chart" id="elevation-btn" aria-expanded="false" aria-label="Toggle elevation chart">
                 <span class="fa fa-area-chart"></span>
