Move button to add custom layers into layer switcher tab, closes #89

--- a/index.html
+++ b/index.html
@@ -178,7 +178,10 @@
 
                 <div class="sidebar-pane" id="tab_layers_control">
                     <h1 class="sidebar-header">Layers<span class="sidebar-close"><i class="fa fa-caret-right"></i></span></h1>
-                    <div id="layers-control-wrapper">
+                    <div id="layers-control-wrapper"></div>
+                    <div class="leaflet-control-layers-separator"></div>
+                    <div>
+                        <button type="button" id="custom_layers_button" class="btn btn-sm pull-right" title="Add or remove custom layers"><span class="fa fa-plus-square"></span> Customize layers</button>
                     </div>
                 </div>
                 
