Add gulp css inject

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 
     <title>BRouter web client</title>
 
+    <!-- inject:css -->
     <link rel="stylesheet" href="dist/brouter-web.css" />
+    <!-- endinject -->
 </head>
 <body class="flexcolumn">
     <nav class="navbar navbar-full navbar-dark bg-inverse">
