Fix DataTables horizontal scrolling (scrollX) in sidebar (flex row)
- remove Bootstrap "table" class, "width: 100%" prevents scrolling,
  not needed anyway (?), seems to have no effects otherwise
- override margin auto with 0 to avoid table taking more space at
  margins than needed and getting misaligned (centered and header left)
  see also https://github.com/DataTables/DataTables/issues/539
- refactoring: use classes instead of ids

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
                     <div class="leaflet-sidebar-pane" id="tab_data">
                         <h1 class="leaflet-sidebar-header">Data<span class="leaflet-sidebar-close"><i class="fa fa-caret-right"></i></span></h1>
-                        <table id="datatable" class="table mini cell-border hover stripe"></table>
+                        <table id="datatable" class="mini cell-border hover stripe"></table>
                     </div>
 
                     <div class="leaflet-sidebar-pane" id="tab_itinerary">
