Adapt transit demo support to new sidebar

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
                     <div class="leaflet-sidebar-pane" id="tab_itinerary">
                         <h1 class="leaflet-sidebar-header">Itinerary<span class="leaflet-sidebar-close"><i class="fa fa-caret-right"></i></span></h1>
-                        <div id="itinerary">
+                        <div id="itinerary" class="flexcolumn flexgrow">
                         </div>
                     </div>
 
