Fix error message position, center horizontally (#56, #114)

--- a/index.html
+++ b/index.html
@@ -177,7 +177,9 @@
         </div>
         
         <div class="leaflet-sidebar-flex-row flexgrow">
-            <div id="map" class="leaflet-sidebar-map"></div>
+            <div id="map" class="leaflet-sidebar-map">
+                <div id="message"></div>
+            </div>
 
             <div id="sidebar" class="leaflet-sidebar collapsed">
 
@@ -218,8 +220,6 @@
                 </div>
             </div>
         </div>
-
-        <div id="message"></div>
     </div>
 
     <div class="collapse" id="elevation-chart"></div>
