Restore (short) attribution on the map, closes #110

--- a/index.html
+++ b/index.html
@@ -67,20 +67,36 @@
                             &copy; <a target="_blank" href="https://www.openstreetmap.org/copyright">OpenStreetMap contributors</a>
                             under <a target="_blank" href="https://opendatacommons.org/licenses/odbl/">ODbL</a>
                         </dd>
-                        <dt>OpenstreetMap.de tiles</dt>
-                        <dd><a target="_blank" href="https://openstreetmap.de/karte.html">openstreetmap.de</a></dd>
+                        <dd>
+                            Search by <a href="https://wiki.openstreetmap.org/wiki/Nominatim" target="_blank">Nominatim</a>
+                        </dd>
+                        <dt>OpenStreetMap tiles</dt>
+                        <dd>
+                            <a target="_blank" href="https://www.openstreetmap.org/copyright">openstreetmap.org</a> 
+                            under <a target="_blank" href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA 2.0</a>
+                        </dd>
+                        <dt>OpenStreetMap.de tiles</dt>
+                        <dd>
+                            <a target="_blank" href="https://openstreetmap.de/karte.html">openstreetmap.de</a>
+                        </dd>
                         <dt>OpenTopoMap tiles</dt>
                         <dd>
                             &copy; <a target="_blank" href="https://opentopomap.org">OpenTopoMap</a>
                             under <a target="_blank" href="https://creativecommons.org/licenses/by-sa/3.0/">CC-BY-SA</a>
                             <a target="_blank" href="http://viewfinderpanoramas.org">SRTM</a>
                         </dd>
-                        <dt>Thunderforest tiles</dt>
+                        <dt>OpenCycleMap & Outdoors tiles</dt>
                         <dd>
                             &copy; <a target="_blank" href="https://www.thunderforest.com">Thunderforest</a>
                             under <a target="_blank" href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA 2.0</a>
                         </dd>
-                        <dt>Waymarked Trails tiles</dt>
+                        <dt>Esri World Imagery</dt>
+                        <dd>
+                            <a target="_blank" href="http://goto.arcgisonline.com/maps/World_Imagery">World Imagery</a> 
+                            &copy; <a target="_blank" href="https://www.esri.com/">Esri</a>, sources: 
+                            Esri, DigitalGlobe, Earthstar Geographics, CNES/Airbus DS, GeoEye, USDA FSA, USGS, Getmapping, Aerogrid, IGN, IGP, and the GIS User Community
+                        </dd>
+                        <dt>Cycling & Hiking tiles</dt>
                         <dd>
                             &copy; <a target="_blank" href="https://cycling.waymarkedtrails.org">Waymarked Trails</a>
                             under <a target="_blank" href="https://creativecommons.org/licenses/by-sa/3.0/de/deed.en">CC-BY-SA 3.0 DE</a>
