--- a/index.html
+++ b/index.html
@@ -185,10 +185,10 @@
     <div id="content" class="flexcolumn flexgrow">
         <div id="sidebarTabs" class="leaflet-sidebar-tabs collapsed">
             <ul role="tablist">
-                <li><a href="#tab_layers_control" role="tab"><img src="dist/images/layers.png" width="20px"></a></li>
-                <li hidden><a href="#tab_itinerary" role="tab"><i class="fa fa-map-signs"></i></a></li>
-                <li><a href="#tab_profile" role="tab"><i class="fa fa-wrench"></i></a></li>
-                <li><a href="#tab_data" role="tab"><i class="fa fa-table"></i></a></li> 
+                <li><a href="#tab_layers_control" role="tab" title="Layers"><img src="dist/images/layers.png" width="20px"></a></li>
+                <li hidden><a href="#tab_itinerary" role="tab" title="Itinerary"><i class="fa fa-map-signs"></i></a></li>
+                <li><a href="#tab_profile" role="tab" title="Custom profile"><i class="fa fa-wrench"></i></a></li>
+                <li><a href="#tab_data" role="tab" title="Data"><i class="fa fa-table"></i></a></li> 
             </ul>
         </div>
         
