Add "About" to navbar also, more prominent than hidden as brand link

--- a/index.html
+++ b/index.html
@@ -38,13 +38,16 @@
                 </form>
                 <div class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-                        <span class="fa fa-lg fa-cloud-download"></span>&nbsp;Download</a>
+                        <span class="fa fa-lg fa-cloud-download" aria-hidden="true"></span>Download</a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" id="dl-gpx" href="#" disabled>GPX</a>
                         <a class="dropdown-item" id="dl-kml" href="#" disabled>KML</a>
                         <a class="dropdown-item" id="dl-geojson" href="#" disabled>GeoJSON</a>
                         <a class="dropdown-item" id="dl-csv" href="#" disabled>data CSV</a>
                     </div>
+                </div>
+                <div class="nav-item">
+                  <a class="nav-link" href="#" data-toggle="modal" data-target="#about"><span class="fa fa-lg fa-info-circle" aria-hidden="true"></span>About</a>
                 </div>
             </div>
         </div>
