--- a/index.html
+++ b/index.html
@@ -176,9 +176,10 @@
                         see dates of <a href="http://brouter.de/brouter/segments4/" target="_blank">data files</a>.
                     </p>
                     <p>
-                         <i><a href="https://github.com/nrenner/brouter-web#credits-and-licenses" target="_blank">Credits</a></i>,
-                         <i><a href="https://github.com/nrenner/brouter-web/blob/master/CHANGELOG.md" target="_blank">Changelog</a></i> and
-                         <i><a href="https://github.com/nrenner/brouter-web#readme" target="_blank">more info</a></i> on the client.
+                        <i><a href="http://brouter.de/privacypolicy.html" target="_blank">Privacy Policy</a></i>, 
+                        <i><a href="https://github.com/nrenner/brouter-web#credits-and-licenses" target="_blank">Credits</a></i>,
+                        <i><a href="https://github.com/nrenner/brouter-web/blob/master/CHANGELOG.md" target="_blank">Changelog</a></i> and
+                        <i><a href="https://github.com/nrenner/brouter-web#readme" target="_blank">more info</a></i> on the client.
                     </p>
                 </div>
             </div>
