Increase select width to better fit longer profile names
(default 220px)

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="nav navbar-nav">
                 <form class="nav-item form-inline">
                     <div class="form-group">
-                        <select class="selectpicker show-tick" id="profile-alternative" multiple>
+                        <select class="selectpicker show-tick" data-width="250px" id="profile-alternative" multiple>
                             <optgroup label="Profile" data-max-options="1" data-icon="fa-bicycle" id="profile">
                                 <option>Custom</option>
                             </optgroup>
