Add jsTree for optional layers

--- a/index.html
+++ b/index.html
@@ -284,6 +284,7 @@
                         <div>
                             <button type="button" id="custom_layers_button" class="btn btn-sm pull-right" data-i18n="[title]sidebar.layers.customize" title="Add or remove custom layers"><span class="fa fa-plus-square"></span> <span data-i18n="sidebar.layers.custom-layers">Custom layers</span></button>
                         </div>
+                        <div id="optional-layers-tree"></div>
                     </div>
 
                     <div class="leaflet-sidebar-pane" id="tab_profile">
