Build a hierarchical tree from JOSM layers

--- a/index.html
+++ b/index.html
@@ -359,6 +359,7 @@
     <script src="dist/url-search-params.js"></script>
     <script src="config.js"></script>
     <script src="keys.js"></script>
+    <script src="layers.js"></script>
 
     <!-- "gulp inject" for debugging -->
     <!-- inject:js -->
