--- a/index.html
+++ b/index.html
@@ -359,7 +359,8 @@
     <script src="dist/url-search-params.js"></script>
     <script src="config.js"></script>
     <script src="keys.js"></script>
-    <script src="layers.js"></script>
+    <script src="layers/layers-josm.js"></script>
+    <script src="layers/layers-collection.js"></script>
 
     <!-- "gulp inject" for debugging -->
     <!-- inject:js -->
